corregir servicios,ver pq en los videos no se implementan y a mi me da error

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -17,13 +17,13 @@ spring.jpa.open-in-view=false
 server.port=8080
 
 
-# Configuraci?n de JPA
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.show-sql = true
-# puerto de ejecuci?n
-#server.port=8080
+## Configuraci?n de JPA
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.hibernate.ddl-auto=update
+#
+#spring.jpa.show-sql = true
+## puerto de ejecuci?n
+##server.port=8080
 
 
 # OPEN API
